2003-01-09  Darin Adler  <darin@apple.com>

        * WebKit.pbproj/project.pbxproj: Add the year 2003, remove CFBundleIconFile,
	bump marketing version to 0.8.1 and version to 52u to keep up with the branch,
	remove CFHumanReadableCopyright, remove NSPrincipalClass.

        * English.lproj/InfoPlist.strings: Updated to match above changes.

2003-01-09  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        * English.lproj/StringsNotToBeLocalized.txt: Update for recent changes.

2003-01-09  Richard Williamson   <rjw@apple.com>

        Fixed 3143361.  This was a regression introduced with some image
        rendering optimizations.  Don't bypass the tiling code path if
        the image needs to be rendered out-of-phase.
        
        Reviewed by hyatt.

        * WebCoreSupport.subproj/WebImageRenderer.m:
        (-[WebImageRenderer tileInRect:fromPoint:]):

2003-01-09  Darin Adler  <darin@apple.com>

        Reviewed by Chris.

	- second pass on 3143332 - we still need a test case to be sure this is right

        * Plugins.subproj/WebBaseNetscapePluginStream.m:
        (-[WebBaseNetscapePluginStream finishedLoadingWithData:]):
	Check for "/". Also report the failure instead of just hanging on forever.

2003-01-09  Darin Adler  <darin@apple.com>

        Reviewed by Richard.
        
        - fixed 3143332 -- if path returned is empty string (or "." or "..") it will trash the /tmp symlink

        * Plugins.subproj/WebBaseNetscapePluginStream.m:
        (-[WebBaseNetscapePluginStream finishedLoadingWithData:]):
        Check for empty string, ".", and "..", and don't create files by those names.

2003-01-09  Trey Matteson  <trey@apple.com>

	3143294 - need short-term bulletproofing of download code against bad filenames

	We protect against a download location that is not an absolute path.

        Reviewed by Darin

        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient continueAfterContentPolicy:response:]):