@@ -26,9 +26,14 @@
 .objc_class_name_WebURLsWithTitles
 .objc_class_name_WebView
 _WebActionButtonKey
+_WebActionButtonKey
+_WebActionElementKey
 _WebActionElementKey
 _WebActionModifierFlagsKey
+_WebActionModifierFlagsKey
 _WebActionNavigationTypeKey
+_WebActionNavigationTypeKey
+_WebActionOriginalURLKey
 _WebBookmarkChildrenKey
 _WebBookmarkDidChangeNotification
 _WebBookmarkWillChangeNotification
@@ -39,12 +44,13 @@ _WebElementImageKey
 _WebElementImageURLKey
 _WebElementLinkLabelKey
 _WebElementLinkTargetFrameKey
+_WebElementLinkTitleKey
 _WebElementLinkURLKey
 _WebElementStringKey
 _WebErrorDomainWebKit
+_WebHistoryAllEntriesRemovedNotification
 _WebHistoryEntriesAddedNotification
 _WebHistoryEntriesRemovedNotification
-_WebHistoryAllEntriesRemovedNotification
 _WebHistoryLoadedNotification
 _WebIconDatabaseDidAddIconNotification
 _WebIconLargeSize
@@ -54,8 +60,3 @@ _WebIconSmallSize
 _WebModifiedBookmarkKey
 _WebURLNamePboardType
 _WebURLPboardType
-_WebActionNavigationTypeKey
-_WebActionElementKey
-_WebActionButtonKey
-_WebActionModifierFlagsKey
-_WebActionOriginalURLKey
